# scheduler-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.example.yaml
.github/workflows/: docker.yml
backend/: Cargo.toml
backend/src/: api.rs  config.rs  main.rs  minecraft_status.rs  models.rs  repository.rs
frontend/: eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/leaderboards/: route.ts
frontend/app/api/leaderboards/catalog/: route.ts
frontend/app/api/minecraft-status/: route.ts
frontend/app/api/overview/: route.ts
frontend/app/api/players/: route.ts
frontend/app/api/servers/: route.ts
frontend/app/healthz/: route.ts
frontend/app/leaderboards/: page.tsx
frontend/app/players/: page.tsx
frontend/components/: dashboard-page.tsx  site-header.tsx
frontend/lib/: api.test.ts  api.ts  db.ts  minecraft-status.ts  repository.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  progress.tsx  separator.tsx  table.tsx  tabs.tsx
